5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1753_3088.log
== TEST (2019-05-16 18:47:08) 
-- CODE:
num=int(input("digite o numero: "))
i=0
while(num!=0):
	i= i +1
	if (num%2==0):
		p= num/100 * i
	else:
		p= num/100 * i
print(round(p, 2))	
-- OUTPUT:
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:48:19) 
-- CODE:
num=int(input("digite o numero: "))
i=0
while(num!=0):
	i= i +1
	if (num%2==0):
		p= num/100 * i
	else:
		q= num/100 * i
print(round(p, 2))
print(round(q, 2))
-- OUTPUT:
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:48:41) 
-- CODE:
num=int(input("digite o numero: "))
i=0
while(num!=0):
	i= i +1
	if (num%2==0):
		p= num/100 * i
	else:
		q= num/100 * i
print(round(p, 2))
print(round(q, 2))
-- OUTPUT:
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:49:27) 
-- CODE:
num=int(input("digite o numero: "))
i=0
while(num!=0):
	i= i +1
	if (num%2==0):
		p= num/100 * i
	else:
		q= num/100 * i
	print(round(p, 2))
	print(round(q, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(q, 2))
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:52:23) 
-- CODE:
num=int(input("digite o numero: "))
i=0
while(num!=0):
	i= i +1
	if (num%2==0):
		p= num/100 * i
	else:
		q= num/100 * i
	print(round(p, 2))
	print(round(q, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(q, 2))
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:54:47) 
-- CODE:
num=int(input("digite o numero: "))
i=0
p=0
q=0
while(num!=0):
	i= i +1
	if (num%2==0):
		p= num/100 * i
	else:
		q= num/100 * i
print(round(p, 2))
print(round(q, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(q, 2))
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
